(executable
 (name main)
 (libraries core_kernel async yojson repl_state engine)
 (preprocess
  (pps ppx_let))
 (modules "main"))

(executable
 (name repl)
 (libraries stdio yojson engine)
 (preprocess
  (pps ppx_sexp_conv ppx_compare))
 (modules "repl"))

(env
 (dev
  (ocamlopt_flags
   (:standard -w +42)))
 (release
  (ocamlopt_flags
   (:standard -O3))))
