(test
 (name tokenizer_tests)
 (libraries base stdio tokenizer)
 (modules ("tokenizer_tests")))

(test
 (name parser_tests)
 (libraries base stdio parser expr)
 (modules ("parser_tests")))

; (test
;  (name expr_tests)
;  (libraries base stdio tokenizer parser expr)
;  (modules ("expr_tests")))

(test
 (name eval_tests)
 (libraries base stdio expr eval)
 (modules ("eval_tests")))
