(library
 (name repl_state)
 (libraries base core_kernel)
 (preprocess
  (pps ppx_sexp_conv ppx_compare))
 (instrumentation
  (backend bisect_ppx))
 (modules "repl_state"))

(library
 (name eval)
 (libraries base expr)
 (preprocess
  (pps ppx_sexp_conv ppx_compare))
 (instrumentation
  (backend bisect_ppx))
 (modules "eval"))

(library
 (name engine)
 (libraries base repl_state tokenizer parser expr eval)
 (preprocess
  (pps ppx_sexp_conv ppx_compare))
 (modules "engine"))
